# Fiber

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  LICENSE_COMMERCIAL.md  LICENSE_OPEN_SOURCE  Makefile  README.md  config.cmake  set_exactly_one.cmake  test.cpp
.github/workflows/: test_with_clang.yml  test_with_gcc.yml  tests.yml
cmake/: config.cmake  embedConfig.cmake.in  fiberConfig.cmake.in
docs/: annotated.html  annotated_dup.js  classes.html  concepts.html  concepts.js  dir_029dbe52c4e830dfef576ef221f9b9c5.html  dir_029dbe52c4e830dfef576ef221f9b9c5.js  dir_04252f71212ea9f9b0ed505d218ce426.html  dir_04252f71212ea9f9b0ed505d218ce426.js  dir_0b30ff8bb9b33840f722373c202d3c71.html  dir_0b30ff8bb9b33840f722373c202d3c71.js  dir_0b9ec6fb52f10050da95c28ff33e597f.html  dir_0b9ec6fb52f10050da95c28ff33e597f.js  dir_107e309f9f293897177ec4de6cf5a764.html  dir_1d21d23a4f55a7c054424c93400c458b.html  dir_1d21d23a4f55a7c054424c93400c458b.js  dir_1ea3a91c1373dbf341f3be4b66a166dc.html  dir_2cef3ce32a087cfd4c4c59e9c9e8a959.html  dir_2cef3ce32a087cfd4c4c59e9c9e8a959.js  dir_37ab1081b99cb3a0c4869fb13117046f.html  dir_37ab1081b99cb3a0c4869fb13117046f.js  dir_3d17069f69f2a871e357366d2d5bad8f.html  dir_3d17069f69f2a871e357366d2d5bad8f.js  dir_3f0bde68eb83b9218a1db2379894cb6a.html  dir_3f0bde68eb83b9218a1db2379894cb6a.js  dir_40683491dc612d86d15bf4a78dceffbd.html  dir_40683491dc612d86d15bf4a78dceffbd.js  dir_4403fbf356e9a7d878dfd15466c928c0.html  dir_4722184bcb88b2dbe84ccbc392f56261.html  dir_4722184bcb88b2dbe84ccbc392f56261.js  dir_5065dca94367bb48a7bb26ce51efc079.html  dir_5065dca94367bb48a7bb26ce51efc079.js  dir_57f9063b516491271768a07eb78fcf6b.html  dir_57f9063b516491271768a07eb78fcf6b.js  dir_5867027acaad8c541007d3532dfc0525.html  dir_5867027acaad8c541007d3532dfc0525.js  dir_5b237d4d4de9c498ceff584b7c356a2a.html  dir_5b237d4d4de9c498ceff584b7c356a2a.js  dir_5d94fe4c1dcfd2dc01cc9a30b72d5748.html  dir_5d94fe4c1dcfd2dc01cc9a30b72d5748.js  (+147 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_25.js  all_26.js  all_27.js  all_28.js  all_29.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  (+135 more)
dox/: README.md  co_await_safety.dox  compile_definitions.dox  coroutine_execution_model.dox  entangled_future_promise_pairs.dox  exception_and_assertions.dox  lines_and_borders.dox  output_stream_formating.dox  overflow_aware_clocks.dox  sys_stubs.dox
dox/getting_started/: async_communication.dox  download_and_integrate.dox  getting_started.dox  hello_coroutine.dox  stm32_example.dox
embed/: Exceptions.cpp  Exceptions.hpp  Future.hpp  OS.hpp  OStream.cpp  OStream.hpp  OStream_test.cpp  RoadMap.md  StaticArrayList.cpp  StaticArrayList.hpp  StaticPriorityQueue.hpp  ansi_codes.hpp  concepts.hpp  interrupts.cpp  interrupts.hpp  math.cpp  math.hpp  memory.cpp  memory.hpp  test.cpp  test.hpp
embed/Allocator/: AllocatorHeaderSizeEncodingStats.py
embed/Chrono/: Duration.hpp  Tick.hpp  TimePoint.hpp  rounding_duration_cast.hpp  sources.cmake
embed/Containers/: ArrayList.hpp  DualArrayList.hpp  DualPriorityQueue.hpp  PriorityQueue.hpp  StaticArrayList.hpp  sources.cmake
embed/Core/: Int.hpp  chrono.hpp  concepts.hpp  definitions.hpp  functional.hpp  sources.cmake  type_traits.hpp
embed/Exceptions/: Exceptions.cpp  Exceptions.hpp  exception_and_assertions.dox  sources.cmake
embed/Future/: Future.hpp  sources.cmake
embed/Interfaces/: AsyncIOStream.hpp  AsyncInputStream.hpp  AsyncOutputStream.hpp  AsyncReadable.hpp  Awaitable.hpp  Pin.hpp  Readable.hpp  Writeable.hpp
embed/Memory/: Allocator.hpp  memory.cpp  memory.hpp  sources.cmake
embed/OS/: Allocator.cpp  Allocator.hpp  BackgroundTask.hpp  BaseTask.hpp  BaseTask_test.cpp  BaseTask_test.hpp  CAllocator.hpp  Clock.hpp  Clock_test.cpp  Clock_test.hpp  CoSignal.cpp  CoSignal.hpp  CoTaskSignal.cpp  CoTaskSignal.hpp  Coroutine.cpp  Coroutine.hpp  Cycle.hpp  Delay.hpp  ExecutionTimes.hpp  Exit.hpp  Future.hpp  HardPeriodicTask.hpp  LinearScheduler.hpp  NextCycle.hpp  OS.cpp  OS.hpp  PeriodicTask.hpp  README.md  RealTimeScheduler.hpp  RealTimeTask.hpp  Schedule.hpp  Scheduler.hpp  Suspend.hpp  TaskFuture.hpp  TaskLifeCycle.cpp  TaskLifeCycle.hpp  TrueAwait.hpp  TryAwait.hpp  Yield.hpp  co_await_safety.dox  (+5 more)
embed/OS2/: Clock.hpp  Clock_test.cpp  Coroutine.cpp  Coroutine.hpp  Coroutine_test.cpp  Coroutine_test.hpp  README.md  Scheduler.hpp
embed/OStream/: OStream.cpp  OStream.hpp  ansi.hpp  frexp10_table.py  sources.cmake  utf8_lines.hpp
embed/TestFramework/: TestFramework.cpp  TestFramework.hpp  sources.cmake
embed/interrupts/: interrupts.cpp  interrupts.hpp  sources.cmake
embed/math/: math.cpp  math.hpp  sources.cmake
embed/sys_stubs/: sources.cmake  sys_stubs.cpp  sys_stubs.dox
embed/test/: sources.cmake  test.cpp  test.hpp  test_main.cpp
fiber/Chrono/: Duration.hpp  Tick.hpp  TimePoint.hpp  rounding_duration_cast.hpp  sources.cmake
fiber/Containers/: ArrayList.hpp  DualArrayList.hpp  DualPriorityQueue.hpp  PriorityQueue.hpp  sources.cmake
fiber/Core/: concepts.hpp  definitions.hpp  functional.hpp  sources.cmake  type_traits.hpp
fiber/Drivers/: LCD_HD44780.hpp
fiber/Exceptions/: Exceptions.cpp  Exceptions.hpp  sources.cmake
fiber/Future/: Future.hpp  sources.cmake
fiber/Interfaces/: AsyncIOStream.hpp  AsyncInputStream.hpp  AsyncOutputStream.hpp  AsyncReadable.hpp  Awaitable.hpp  Pin.hpp  Readable.hpp  Writeable.hpp  cAwaitable.hpp  cPin.hpp
fiber/Memory/: StackAllocator.cpp  StackAllocator.hpp  StaticLinearAllocator.hpp  memory.cpp  memory.hpp  sources.cmake
fiber/OS/: Await.hpp  CoSignal.cpp  CoSignal.hpp  Coroutine.cpp  Coroutine.hpp  Delay.hpp  Exit.hpp  LinearScheduler.hpp  NextCycle.hpp  PeriodicTask.hpp  RealTimeScheduler.hpp  RealTimeTask.hpp  Scheduler.hpp  Task.hpp  TrueAwait.hpp  TryAwait.hpp  sources.cmake
(+849 files in other folders)
